--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ additional_links:
 # additional_links:
 - title: Pdf Download
   icon: far fa-file-pdf
-  url: https://github.com/egubaidullin/egubaidullin.github.io/raw/main/Gubaidullin_Eduard_CV_ENG.pdf
+  url: https://raw.githubusercontent.com/egub24/egub24.github.io/main/Gubaidullin_Eduard_CV_ENG.pdf
 
 # additional icon to telegram 
 - title: Telegram
